# PyTorchDecomp

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  changelog.html  code_of_conduct.html  contributing.html  contributors.html  index.html  introduction.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  tests.html  torchdecomp.html  tutorials.html
.github/workflows/: build_test_push.yml  release-please.yml  sphinx.yml
_modules/: index.html
_modules/tests/: test_cholesky.html  test_factor.html  test_helper.html  test_ica.html  test_lu.html  test_rec.html  test_symrec.html
_modules/torchdecomp/: factor.html  helper.html  ica.html  qr.html  symrec.html
_sources/: changelog.rst.txt  code_of_conduct.rst.txt  contributing.rst.txt  contributors.rst.txt  index.rst.txt  modules.rst.txt  tests.rst.txt  torchdecomp.rst.txt
_sources/markdowns/: introduction.md.txt
docs/: conf.py  index.rst  introduction.rst  modules.rst  tutorials.rst
docs/_build/: ._index.html  .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.html  torchdecomp.html
docs/_build/.doctrees/: environment.pickle  index.doctree  modules.doctree  tests.doctree  torchdecomp.doctree
docs/_build/_sources/: index.rst.txt  modules.rst.txt
docs/_build/doctrees/: changelog.doctree  code_of_conduct.doctree  contributing.doctree  contributors.doctree  environment.pickle  index.doctree  introduction.doctree  modules.doctree  tests.doctree  torchdecomp.doctree  tutorials.doctree
docs/_build/doctrees/markdowns/: introduction.doctree
docs/_build/html/: ._index.html  .buildinfo  changelog.html  code_of_conduct.html  contributing.html  contributors.html  genindex.html  index.html  introduction.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.html  torchdecomp.html  tutorials.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/tests/: test_cholesky.html  test_factor.html  test_helper.html  test_ica.html  test_lu.html  test_nmf.html  test_qr.html  test_rec.html  test_symrec.html
docs/_build/html/_modules/torchdecomp/: cholesky.html  factor.html  helper.html  ica.html  lu.html  nmf.html  qr.html  rec.html  symrec.html
docs/_build/html/_sources/: index.rst.txt  tutorials.rst.txt
docs/_build/html/markdowns/: introduction.html
docs/_build/html/notebooks/: tutorial_3_supervised.ipynb
docs/_static/notebooks/: tutorial_2_unsupervised.html
docs/_static/notebooks/.ipynb_checkpoints/: tutorial_1_basic-checkpoint.ipynb
docs/notebooks/: tutorial_1_basic.html  tutorial_1_basic.ipynb  tutorial_2_unsupervised.html  tutorial_2_unsupervised.ipynb  tutorial_3_supervised.html  tutorial_3_supervised.ipynb
docs/notebooks/.ipynb_checkpoints/: tutorial_1_basic-checkpoint.ipynb  tutorial_2_unsupervised-checkpoint.ipynb  tutorial_3_supervised-checkpoint.ipynb
tests/: test_cholesky.py  test_factor.py  test_helper.py  test_ica.py  test_lu.py  test_nmf.py  test_qr.py  test_rec.py  test_symrec.py
torchdecomp/: __init__.py  cholesky.py  factor.py  helper.py  ica.py  lu.py  nmf.py  qr.py  rec.py  symrec.py
