[tool.poetry]
name = "torchdecomp"
version = "1.3.1"
description = "A set of matrix decomposition algorithms implemented as PyTorch classes"
authors = ["Koki Tsuyuzaki <k.t.the-answer@hotmail.co.jp>"]
maintainers = ["Koki Tsuyuzaki <k.t.the-answer@hotmail.co.jp>"]
readme = "README.md"
repository = "https://github.com/chiba-ai-med/PyTorchDecomp"
keywords = ["pytorch", "machine learning"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3"
]
include = ["tests/*"]


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
torch = "^2.3.0"
matplotlib = "^3.8.4"
torchvision = "^0.18.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
urllib3 = "<=2.0"
black = "^24.4.2"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^3.0.1"
jupyterlab = "^4.1.8"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
